--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body{
 }
 .container{
     display: flex;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
     height:90px;
     width:100%;
     align-items: center;
@@ -43,7 +43,7 @@ body{
     display: flex;
     width:50%;
     text-align: center;
-    background-color:rgb(255, 0, 0);
+    background-color:rgba(179, 255, 0, 0.755);
     border-radius: 90px;
 }
 
@@ -71,7 +71,7 @@ body{
     text-align: right;
     margin-top: -23px;
     font-size: 20px;   
-    background-color: red;
+    background-color: rgba(179, 255, 0, 0.755);
     padding-right:10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
