--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ body{
 }
 .in_div{
     display: flex;
-    width:100%;
+    width:none;
     text-align: center;
     background-color:rgba(173, 177, 164, 0.755);
     border-radius: 90px;
@@ -49,9 +49,8 @@ body{
 
 .index_input{
     height:30px;
-   
-    outline: none;
-    border:none;
+    outline: 10px;
+    border: 10px;
     padding: 10px;
     font-size: 20px;
     text-align: center;
