--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ body{
     text-align: center;
     background-color:rgba(173, 177, 164, 0.755);
     border-radius: 90px;
+    align-items: center;
 }
 
 .index_input{
