--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ body{
     margin-right: 90px;
 }
 .in_div{
-    display: flex;
+    display: center;
     width:0px;
     text-align: center;
     background-color:rgba(173, 177, 164, 0.755);
