--- a/index.css
+++ b/index.css
@@ -50,12 +50,12 @@ body{
 
 .index_input{
     height:30px;
+    width:50px;
     outline: 10px;
     border: 10px;
     padding: 10px;
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
-    align-items: center;
 }
 
 .head_title{
