--- a/index.css
+++ b/index.css
@@ -50,13 +50,12 @@ body{
 
 .index_input{
     height:30px;
-    width:50px;
+    width:100%;
     outline: 10px;
     border: 10px;
     padding: 10px;
-    font-size: 12px;
+    font-size: 25px;
     text-align: center;
-    display:center;
 }
 
 .head_title{
