--- a/index.css
+++ b/index.css
@@ -49,8 +49,8 @@ body{
 }
 
 .index_input{
-    height:30px;
-    width:100px;
+    height:100%;
+    width:100%;
     outline: 10px;
     border: 10px;
     padding: 10px;
