--- a/index.css
+++ b/index.css
@@ -49,12 +49,12 @@ body{
 }
 
 .index_input{
-    height:100%;
-    width:100%;
+    height:30px;
+    width:5300%;
     outline: 10px;
     border: 10px;
     padding: 10px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
 }
 
