--- a/index.css
+++ b/index.css
@@ -26,13 +26,13 @@ body{
 }
 .search{
     object-fit: contain;
-    width:100px;
+    width:30px;
     padding:0 10px;
 }
 .input{
     
     width:100%;
-    margin-left: 100%;   /*  change here */
+    margin-left: 20%;   /*  change here */
     
 }
 .head_button{
@@ -49,12 +49,12 @@ body{
 }
 
 .index_input{
-    height:30px;
-    width:5300%;
+    height:100%;
+    width:100%;
     outline: 10px;
     border: 10px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
 }
 
